[package]
name = "warp-packer"
version = "0.4.0-dev"
authors = ["Diego Giagio <diego@giagio.com>", "Marcel Sery <sery.m@email.cz>", "Christian Sdunek <me@systemcluster.me>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
tempdir = "0.3.7"
rand = "0.7.3"
flate2 = "1.0.14"
tar = "0.4.26"
lazy_static = "1.4.0"

[features]
default = ["target-native"]
target-native = []
target-linux_x64 = []
target-macos_x64 = []
target-windows_x64 = []
