[package]
name = "warp-runner"
version = "0.4.0-dev"
authors = ["Diego Giagio <diego@giagio.com>", "Marcel Sery <sery.m@email.cz>", "Christian Sdunek <me@systemcluster.me>"]
edition = "2018"

[dependencies]
memmem = "0.1.1"
flate2 = "1.0.14"
tar = "0.4.26"
dirs = "2.0.2"
winapi = "0.3.8"
log = "0.4.8"
simple_logger = "1.6.0"

[features]
default=[]
no-console=[]
